# TransizioniFinanziarie

./: CMakeLists.txt  ContoCorrente.cpp  ContoCorrente.h  Entrata.cpp  Entrata.h  MainWindow.cpp  MainWindow.h  Movimento.cpp  Movimento.h  Uscita.cpp  Uscita.h  main.cpp
test/: CMakeLists.txt  TestContoCorrente.cpp  TestMovimenti.cpp  runAllTests.cpp
